<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opendds</name>
  <version>0.1.2</version>
  <description>OpenDDS wrapper for OpenDDS</description>
  <maintainer email="user@email.com">user</maintainer>
  <license>OpenDDS License</license>

  <buildtool_depend>wget</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
